# Task2

./: CMakeLists.txt  WithoutMPISolution.cpp  a.out  main  main.cpp
